--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,15 @@
-#root {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
-	text-align: center;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
+/* #root {
+	max-width: 1280px;
+} */
+
 .App {
-	text-align: center;
+	margin: 1.5rem;
 }
 
 .form {
@@ -22,8 +25,8 @@
 }
 
 .form input {
-	width: 300px;
-	height: 2rem;
+	color: #fff;
+	width: 250px;
 	margin: 0.25rem;
 	font-size: 1rem;
 }
