--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -1,8 +1,9 @@
 .modalBackground {
 	width: 100vw;
 	height: 100vh;
-	background-color: rgba(200, 200, 200);
+	background-color: rgba(0, 0, 0, 0.5);
 	position: fixed;
+	z-index: 2;
 	display: flex;
 	justify-content: center;
 	align-items: center;
