--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 }
 
 :root {
+	box-sizing: border-box;
 	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 24px;
