insert modal input field adjust

--- a/client/src/components/InsertForm/InsertData.css
+++ b/client/src/components/InsertForm/InsertData.css
@@ -23,7 +23,12 @@
 
 .modalContainer .title {
 	display: inline-block;
-	margin-top: 0.75rem;
+	margin: 0 0 1rem 0;
+}
+
+.inputField {
+	display: block;
+	margin: 50px;
 }
 
 .titleCloseBtn {
