--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -10,16 +10,13 @@
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
-
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
 }
 
 html {
 	height: 100%;
+	min-width: 1000px;
 }
 
 body {
