--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -16,18 +18,17 @@
 
 html {
 	height: 100%;
-	min-width: 1000px;
+	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 body {
+	width: 100%;
 	height: 100%;
 	margin: 0;
+	padding: 0;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background: rgb(71, 181, 255);
-	background: linear-gradient(
-		145deg,
-		rgba(71, 181, 255, 1) 18%,
-		rgba(37, 109, 133, 1) 80%
-	);
+	background: linear-gradient(145deg, #0093e9 18%, #80d0c7 80%);
 }
