--- a/client/src/components/InsertForm/InsertData.css
+++ b/client/src/components/InsertForm/InsertData.css
@@ -14,8 +14,8 @@
 	width: 420px;
 	height: 500px;
 	border-radius: 12px;
-	background-color: white;
-	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	background-color: #fff;
+	box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
 	display: flex;
 	flex-direction: column;
 	padding: 1.75rem;
@@ -23,7 +23,7 @@
 
 .modalContainer .title {
 	display: inline-block;
-	margin: 0 0 1rem 0;
+	margin: 0 0 1rem;
 }
 
 .inputField {
@@ -56,8 +56,8 @@ footer {
 footer button {
 	width: 49%;
 	height: 35px;
-	border: none;
-	color: white;
+	border: 0;
+	color: #fff;
 	border-radius: 8px;
 	font-size: 1.5rem;
 	cursor: pointer;
