--- a/client/src/components/BackgroundImage/Background.css
+++ b/client/src/components/BackgroundImage/Background.css
@@ -5,14 +5,18 @@
 	50% {
 		transform: translateX(-25%) translateZ(0) scaleY(0.55);
 	}
-	100% {
+	to {
 		transform: translateX(-50%) translateZ(0) scaleY(1);
 	}
 }
 
-.waveWrapper {
-	overflow: hidden;
+.waveWrapper,
+.waveWrapperInner {
 	position: absolute;
+	overflow: hidden;
+}
+
+.waveWrapper {
 	z-index: -1;
 	left: 0;
 	right: 0;
@@ -22,9 +26,7 @@
 }
 
 .waveWrapperInner {
-	position: absolute;
 	width: 100%;
-	overflow: hidden;
 	height: 100%;
 	bottom: -1px;
 }
@@ -50,13 +52,12 @@
 	height: 100%;
 	background-repeat: repeat no-repeat;
 	background-position: 0 bottom;
-
 	background-attachment: fixed;
 	transform-origin: center bottom;
 }
 
 .waveTop {
-	background-image: url("../../assets/waves/top-wave.png");
+	background-image: url(../../assets/waves/top-wave.png);
 	background-size: 50% 50px;
 }
 
@@ -68,7 +69,7 @@
 }
 
 .waveMiddle {
-	background-image: url("../../assets/waves/mid-wave.png");
+	background-image: url(../../assets/waves/mid-wave.png);
 	background-size: 50% 70px;
 }
 
@@ -77,7 +78,7 @@
 }
 
 .waveBottom {
-	background-image: url("../../assets/waves/bottom-wave.png");
+	background-image: url(../../assets/waves/bottom-wave.png);
 	background-size: 50% 80px;
 }
 
