--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,25 +1,17 @@
-.App-container {
+/* .App-container {
 	background-color: #f5f5f5;
 	padding: 2rem 4rem;
 	margin: 0 auto;
 	border-radius: 20px;
 	min-width: 920px;
 	max-width: 920px;
-}
+} */
 
-.header {
-	font-size: 2rem;
-	padding: 2rem;
-	font-weight: 600;
-	color: #fff;
-	text-align: center;
-}
-
-.search-insert {
+/* .search-insert {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-}
+} */
 
 .search-insert > * {
 	margin: 0 1rem;
