--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -2,16 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+	.scroll-width {
+		scrollbar-width: thin;
+	}
+
+	.b-bottom > tr {
+		@apply border border-solid border-slate-100;
+	}
+
+	.b-color-even > tr:nth-of-type(even) {
+		@apply bg-[#f3f3f3];
+	}
+
+	.b-color-last > tr:last-of-type {
+		@apply border-2 border-solid border-b-green-700;
+	}
+
+	.b-color-none > tr:last-of-type {
+		@apply border-none;
+	}
+}
+
+*,
+::after,
+::before {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
 :root {
+	box-sizing: border-box;
 	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
-}
-
-#root {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
-	text-align: center;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
 }
